--- a/backend/package.json
+++ b/backend/package.json
@@ -31,14 +31,14 @@
         "joi": "^17.12.0",
         "winston": "^3.11.0",
         "nodemailer": "^6.9.7",
-        "uuid": "^9.0.1"
+        "uuid": "^9.0.1",
+        "@types/node": "^20.11.0"
     },
     "devDependencies": {
         "@types/express": "^4.17.21",
         "@types/cors": "^2.8.17",
         "@types/bcrypt": "^5.0.2",
         "@types/jsonwebtoken": "^9.0.5",
-        "@types/node": "^20.11.0",
         "@types/nodemailer": "^6.4.14",
         "@types/uuid": "^9.0.7",
         "typescript": "^5.3.3",
