--- a/backend/package.json
+++ b/backend/package.json
@@ -32,7 +32,8 @@
         "winston": "^3.11.0",
         "nodemailer": "^6.9.7",
         "uuid": "^9.0.1",
-        "@types/node": "^20.11.0"
+        "@types/node": "^20.11.0",
+        "typescript": "^5.3.3"
     },
     "devDependencies": {
         "@types/express": "^4.17.21",
@@ -41,7 +42,6 @@
         "@types/jsonwebtoken": "^9.0.5",
         "@types/nodemailer": "^6.4.14",
         "@types/uuid": "^9.0.7",
-        "typescript": "^5.3.3",
         "ts-node": "^10.9.2",
         "nodemon": "^3.0.2",
         "@types/jest": "^29.5.11",
